--- a/StartingNotebook.ipynb
+++ b/StartingNotebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "StartingNotebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNOC6YMuE4lRC/ot+Zal/S8",
+      "authorship_tag": "ABX9TyNGCz47iGuQ4HBm5cg6NBt9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,43 +25,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZjAMw6MY1uDY",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "12a6edd3-93e0-4192-d09d-b4d9eba1bea5"
-      },
-      "source": [
-        "2+2"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "I-2BSr-a2A4o",
         "colab_type": "text"
       },
       "source": [
-        "# Section Title (Project Name)\n",
+        "# Precipitation and Temperature in State College Over Time\n",
         "\n",
         "\n"
       ]
@@ -73,7 +43,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#Outline (50 words minimum)"
+        "#Outline\n",
+        "This project will explore the link between precipitation, date, and temperature over a period of 2 years, using all available data from 2017 and 2018. The data was collected from the NOAA. The goal of this project is to visualize the precipitation amount and type as a trend related to seasons. Each year will be represented with a different color, and the different types of precipitation (precipitation under 32 degrees vs. precipitation above 32 degrees) will be represented by different shaped data points that will only appear when selected.   "
       ]
     },
     {
@@ -83,9 +54,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#Sketch!\n",
-        "\n",
-        "![dog!](https://raw.githubusercontent.com/mjc551/SRA268/master/images/dog-451643.jpg)"
+        "#Initial Sketch\n",
+        "![The proposed image of what the precipitation visualization will look like](https://raw.githubusercontent.com/mjc551/SRA268/master/images/precipitation%20graph.jpg)\n"
       ]
     },
     {
@@ -95,7 +65,9 @@
         "id": "28ZDduqw6KZ9"
       },
       "source": [
-        "#Conclusions"
+        "#Conclusions\n",
+        "\n",
+        "This visualization concluded that there was more precipitation in the winter months, especially snow (as expected). The visualization also concluded that the level of precipitation was relatively low both years, regardless of season. Additionally, the early months in 2018 received less precipitation than 2017, while the later months of 2018 had much more precipitation and snow than in 2017. "
       ]
     }
   ]
